1. remove 'butterknife' plugin & dependencies 2. will use 'viewBinding' instead.