@@ -26,29 +26,7 @@ android {
     //참고: https://daryeou.tistory.com/324
     buildFeatures {
         buildConfig = true
-    }
-
-    // ButterKnife JDK 17 지원하지 않아 강제로 해결책 적용함
-    // 참고: https://stackoverflow.com/questions/76216854/butterknife-issue-after-updating-to-latest-version-of-android-studio-with-lates
-    // enable internal JDK API access at runtime
-    tasks.withType(JavaCompile).configureEach {
-        options.fork = true
-        options.forkOptions.jvmArgs += [
-                // essential for butterknife
-                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-
-                // if you need Glide or LomBok
-                // these may not be the exact list, but it works for me
-                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-                '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
-        ]
+        viewBinding = true
     }
 
     productFlavors {
@@ -126,10 +104,6 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
-    // ButterKnife 디펜던시.
-    implementation 'com.jakewharton:butterknife:10.2.3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
-
     // RecyclerView 디펜던시.
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // RecyclerView 디펜던시. For control over item selection of both touch and mouse driven selection
@@ -166,15 +140,6 @@ dependencies {
     // rx Java 디펜던시.
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-
-//    // Kakao 디펜던시.
-//    implementation "com.kakao.sdk:v2-all:2.20.3" // 전체 모듈 설치, 2.11.0 버전부터 지원
-//    implementation "com.kakao.sdk:v2-user:2.20.3" // 카카오 로그인 API 모듈
-//    implementation "com.kakao.sdk:v2-share:2.20.3" // 카카오톡 공유 API 모듈
-//    implementation "com.kakao.sdk:v2-talk:2.20.3" // 카카오톡 채널, 카카오톡 소셜, 카카오톡 메시지 API 모듈
-//    implementation "com.kakao.sdk:v2-friend:2.20.3" // 피커 API 모듈
-//    implementation "com.kakao.sdk:v2-cert:2.20.3" // 카카오톡 인증 서비스 API 모듈
-
 
     // 테스트용 디펜던시.
     testImplementation 'junit:junit:4.12'
